RESOLVED FIXED306068
Changing flow-tolerance in Web Inspector doesn't trigger relayout for display: grid-lanes
https://bugs.webkit.org/show_bug.cgi?id=306068
Summary Changing flow-tolerance in Web Inspector doesn't trigger relayout for display...
Brandon
Reported 2026-01-22 15:12:43 PST
If you modify item/flow-tolerance is a display: grid-lanes items may shift. This is not happening when updating them from the web inspector. It does work if you modify the source code directly and reload the page.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-22 15:12:51 PST
Brandon
Comment 2 2026-01-22 15:32:47 PST
Testing a fix
Brandon
Comment 3 2026-01-22 15:46:12 PST
EWS
Comment 4 2026-01-23 08:01:38 PST
Committed 306093@main (4b7904bbcb58): <https://commits.webkit.org/306093@main> Reviewed commits have been landed. Closing PR #57084 and removing active labels.
Tim Nguyen (:ntim)
Comment 5 2026-02-03 15:30:30 PST
Note You need to log in before you can comment on or make changes to this bug.