Cherry-pick 4b7904bbcb58. rdar://168771191

Changing flow-tolerance in Web Inspector doesn't trigger relayout for display: grid-lanes
    https://bugs.webkit.org/show_bug.cgi?id=306068
    rdar://problem/168711707

    Reviewed by Sammy Gill and Tim Nguyen.

    The flow-tolerance CSS property was stored directly in NonInheritedRareData,
    but rareDataChangeRequiresLayout only checked for changes to the grid and
    gridItem DataRefs. This meant changes to flow-tolerance weren't detected as
    requiring layout.

    Move flow-tolerance into GridData alongside the other grid container properties.
    This ensures changes to flow-tolerance are detected by the existing
    `a.grid != b.grid` check in rareDataChangeRequiresLayout.

    * LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-lanes/tentative/item-placement/flow-tolerance/flow-tolerance-dynamic-update-expected.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-lanes/tentative/item-placement/flow-tolerance/flow-tolerance-dynamic-update-ref.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-lanes/tentative/item-placement/flow-tolerance/flow-tolerance-dynamic-update.html: Added.
    * Source/WebCore/css/CSSProperties.json:
    * Source/WebCore/style/computed/data/StyleGridData.cpp:
    (WebCore::Style::GridData::GridData):
    (WebCore::Style::GridData::operator== const):
    (WebCore::Style::GridData::dumpDifferences const):
    * Source/WebCore/style/computed/data/StyleGridData.h:
    * Source/WebCore/style/computed/data/StyleNonInheritedRareData.cpp:
    (WebCore::Style::NonInheritedRareData::NonInheritedRareData):
    (WebCore::Style::NonInheritedRareData::operator== const):
    (WebCore::Style::NonInheritedRareData::dumpDifferences const):
    * Source/WebCore/style/computed/data/StyleNonInheritedRareData.h:

    Canonical link: https://commits.webkit.org/306093@main

Identifier: 305413.121@safari-7624-branch